cloning and modify html

--- a/hello-may.html
+++ b/hello-may.html
@@ -16,7 +16,8 @@
     <li> Japanese: Konnichiwa, sekai! </li>
     <li> French: Bonjour, monde! </li>
     <li> Kinyarwanda: Mwirwe, isi! </li>
-    <li>Mr Johnny</li>
+    <li>Mr.Duverseau</li>
+    <li>I love coding</li>
  </ul> 
 </body>
 </html>
